Fixed index spacing

--- a/stylesheets/index-stylesheet.css
+++ b/stylesheets/index-stylesheet.css
@@ -32,5 +32,5 @@ a {
 img {
 	height: 29px;
 	width: 29px;
-	margin-top: 29.4%;
+	margin-top: 32.7%;
 }
